--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## Database Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/deliverit?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/deliverit
 spring.datasource.username=root
 spring.datasource.password=password
 
@@ -9,3 +9,10 @@ spring.jpa.hibernate.ddl-auto=update
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
+#views dir
+spring.mvc.view.prefix=/WEB-INF/
+spring.mvc.view.suffix=.jsp
+
+#JWT properties
+jwt.secret = deliverit
