[+]  email will be sent to customer when rejecting the delivery request

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,12 @@ spring.mvc.view.suffix=.jsp
 
 #JWT properties
 jwt.secret = deliverit
+
+#SMTP properties
+#lsivvnfajmvcpppn
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=thebloginofficial@gmail.com
+spring.mail.password=lsivvnfajmvcpppn
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
